--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Battleship Online</title>
+    <title>TicTacToe Online</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/default.css">
     <script src="assets/js/default.js"></script>
@@ -17,7 +17,7 @@
 <body>
 
     <div class="center">
-        <h2>Welcome to Battleship Online</h2>
+        <h2>Welcome to TicTacToe Online</h2>
         <br /><br />
         <div id='login'>
             <h5>Click <a href='./game/new'>here</a> to start a game</h5>
