--- a/public/views/game/index.html
+++ b/public/views/game/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TicTacToe Room</title>
 
-    <link rel="stylesheet" type="text/css" href="../../assets/css/default.css">
-    <script src="../../assets/js/default.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/default.css">
+    <script src="assets/js/default.js"></script>
 
     <style>
         .container {
